--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -3,6 +3,8 @@
   box-sizing: border-box;
 }
 body {
+  padding: 0;
+  margin: 0;
   color: #121212;
 }
 a {
@@ -13,6 +15,8 @@ a {
 /* ### Reset CSS ### */
 button {
   display: inline-block;
+  padding: 0;
+  margin: 0;
   background-color: transparent;
   border: none;
   cursor: pointer;
@@ -59,8 +63,8 @@ button {
   background-color: orange;
 }
 :is(.cart, .profile) {
-  width: 70px;
-  height: 70px;
+  width: 60px;
+  height: 60px;
   vertical-align: top;
   border-radius: 100%;
   border: 2px solid transparent;
@@ -73,6 +77,9 @@ button {
 }
 .cartModal {
   position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translateX(-50%);
   background: #fff;
   min-width: 200px;
   box-shadow: 0 0 10px rgba(0,0,0,0.1);
