--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,6 +1,17 @@
+/* ### FONT & ICON ### */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://unicons.iconscout.com/release/v4.0.0/css/line.css");
+
 /* ### Default CSS ### */
+:root {
+  --point: orange;
+  --point-dark: rgb(255, 115, 0);
+  --point-light: rgb(255, 238, 205);
+}
 * {
   box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+  letter-spacing: -0.3px;
 }
 body {
   padding: 0;
@@ -13,6 +24,13 @@ a {
 }
 
 /* ### Reset CSS ### */
+h1, h2, h3, h4, h5, h6, p, ul, ol {
+  margin: 0;
+  padding: 0;
+}
+ul, ol {
+  list-style: none;
+}
 button {
   display: inline-block;
   padding: 0;
@@ -32,7 +50,9 @@ button {
 }
 
 /* ### header ### */
-.header {}
+.header {
+  border: 1px solid #eee;
+}
 .header .inner {
   display: flex;
   justify-content: space-between;
@@ -60,7 +80,7 @@ button {
   height: 3px;
   bottom: 0;
   left: 0;  
-  background-color: orange;
+  background-color: var(--point);
 }
 :is(.cart, .profile) {
   width: 60px;
@@ -72,6 +92,11 @@ button {
 :is(.cart, .profile):hover {
   border: 2px dotted #000;
 }
+.profile img {
+  width: 100%;
+}
+
+/* cart modal */
 .cartWrap {
   display: inline-block;
   position: relative;
@@ -82,28 +107,82 @@ button {
   left: 50%;
   transform: translateX(-50%);
   background: #fff;
-  min-width: 200px;
+  min-width: 330px;
+  border-radius: 10px;
   box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
-.profile {}
-.profile img {
+.cartModal > h3 {
+  padding: 20px;
+  border-bottom: 1px solid #eee;
+  font-size: 15px;
+}
+.cart-content {
+  padding: 20px;
+}
+
+.cart-empty {
+  padding: 60px 0;
+  text-align: center;
+  font-size: 14px;
+  color: #ccc;
+}
+
+.cart-list {}
+.cart-item {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.cart-prd-thumb {
+  width: 90px;
+}
+.cart-prd-thumb img {
   width: 100%;
+  border-radius: 7px;
+}
+
+.cart-prd-desc {
+  width: 75%;
+}
+.cart-prd-desc h3 {
+  margin: 0 0 5px;
+  font-weight: 400;
+  font-size: 13px;
+  color: #777;
+}
+
+.cart-prd-desc p {
+  color: #777;
+}
+.cart-prd-price {}
+.cart-prd-count {}
+.cart-prd-total {
+  margin-left: 6px;
+  font-weight: 600;
+  color: #000;
+}
+
+.cart-item .btnDel {
+  font-size: 18px;
+  color: #aaa;
+  text-align: center;
 }
 
 /* ### Main ### */
-.main {}
 .main .inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   overflow: hidden;
 }
 [class *= "main-"] {
   padding: 50px;
 }
 .main-left {
-  float: left;
   width: 600px;
 }
 .main-right {
-  float: right;
   width: calc(100% - 600px);
 }
 
@@ -127,4 +206,96 @@ button {
 }
 .thumb-small button.active img {
   opacity: 1;
+}
+
+/* --- right --- */
+/* 상품명 */
+.prd-title {
+  margin: 0 0 30px;
+  font-size: 42px;
+}
+.prd-title span {
+  display: block;
+  font-size: 16px;
+  color: var(--point);
+  letter-spacing: 2px;
+}
+.prd-desc {
+  margin: 0 0 20px;
+  font-size: 19px;
+  color: #777;
+}
+
+/* 할인가 */
+.prd-sale {}
+.prd-sale * {
+  display: inline-block;
+  vertical-align: middle;
+}
+.prd-sale strong {
+  font-weight: 600;
+  font-size: 26px;
+}
+.prd-discount {
+  margin-left: 15px;
+  padding: 2px 7px;
+  border-radius: 5px;
+  background: var(--point-light);
+  font-weight: 600;
+  color: var(--point);
+}
+
+/* 원가 */
+.prd-original strike {
+  font-weight: 500;
+  font-size: 15px;
+  color: #ccc;
+}
+
+/* 수량 버튼 & 장바구니 담기 버튼 */
+.prd-button {
+  margin: 30px 0 0;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.prd-button > * {
+  height: 55px;
+  border-radius: 10px;
+}
+.custom-prd-num {
+  width: 150px;
+  background-color: #f8f9fa;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.custom-prd-num [class *= "btn"] {
+  width: calc(calc(100% - 50px) / 2);
+  font-weight: 600;
+  font-size: 20px;
+  color: var(--point);
+}
+.prd-num-input {
+  width: 50px;
+  text-align: center;
+  background: transparent;
+  border: none;
+}
+.addCart {
+  width: calc(100% - calc(150px + 10px));
+  background: var(--point-dark);
+  box-shadow: 0 0 10px rgb(255, 115, 0, 0.5);
+  color: #fff;
+  font-size: 15px;
+  transition: 0.35s;
+}
+.addCart i {
+  display: inline-block;
+  margin-right: 5px;
+  transform: translateY(2px);
+  font-size: 20px;
+}
+.addCart:hover {
+  font-size: 17px;
 }
